--- a/pitch.scss
+++ b/pitch.scss
@@ -101,3 +101,72 @@ $border: 4px solid;
         left: 94%;
     }
 }
+
+@media screen and (max-width:940px){
+    .container{
+        width: 850px;
+        height: 550px;
+    }
+}
+
+@media screen and (max-width:763px){
+    .container{
+        width: 770px;
+        height: 590px;
+        .post1{
+            position: absolute;
+            // top: calc(50% - 50px);
+            left: 93%;
+        }
+    }
+}
+
+@media screen and (max-width:640px){
+    .container{
+        width: 630px;
+        height: 550px;
+        .post1{
+            left: 91%;
+        }
+        .corner-right{
+            top: 94%;
+        }
+        .corner-right1{
+            top: 94%;
+        }
+    }
+}
+
+@media screen and (max-width:320px) {
+    .container{
+        width: 300px;
+        height: 500px;
+
+        .post1{
+            width: 25px;
+            height: 100px;
+            left: 89%;
+        }
+        .post{
+            width: 25px;
+        }
+        .middle-circle{
+            width: 50px;
+            height: 50px;
+            top: 44%;
+            left: 38%;
+        }
+
+        .corner-right{
+            top: 93%;
+            left: 87%;
+        }
+        .corner-right1{
+            top: 93%;
+        }
+        .corner-left{
+            left: 87%;
+        }
+    }
+}
+    
